@@ -752,9 +752,9 @@ const char *find_config_str(const struct config_node *cn,
 {
 	const struct config_node *n = find_config_node(cn, path);
 
-	if (n && n->v->type == CFG_STRING) {
-		if (*n->v->v.str)
-			log_very_verbose("Setting %s to %s", path, n->v->v.str);
+	/* Empty strings are ignored */
+	if ((n && n->v->type == CFG_STRING) && (*n->v->v.str))
+		log_very_verbose("Setting %s to %s", path, n->v->v.str);
 		return n->v->v.str;
 	}
 
