@@ -1,5 +1,6 @@
 Version 2.02.06 -
 =================================
+  Ignore empty strings in config files.
   Require non-zero regionsize and document parameter on lvcreate man page.
   Invalidate cache if composition of VG changed externally.
 
